<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">UniJET</string>
    <string name="title_home" translatable="false">MyUniJET</string>
    <string name="courses_tab_name">Courses</string>
    <string name="projects_tab_name">Projects</string>
    <string name="groups_tab_name">Groups</string>
    <string name="myunijet_tab_name" translatable="false">MyUniJET</string>
    <string name="login_enter_mail_hint" translatable="false">E-mail</string>
    <string name="title_login">Let\'s get on board</string>
    <string name="e_mail" translatable="false">E-mail</string>
    <string name="text_password" translatable="false">Password</string>
    <string name="set_password" translatable="false">*******</string>
    <string name="text_confirm_password">Re-enter Password</string>
    <string name="register_button">Register</string>
    <string name="text_have_account">I have an account</string>
    <string name="student_registration">Student Registration</string>
    <string name="professor_registration">Professor Registration</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="student_id">Student ID</string>
    <string name="gender">Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_no">Rather not answer</string>
    <string name="department">Department</string>
    <string name="department_chemstry">Chemstry</string>
    <string name="department_computer_science">Computer Science</string>
    <string name="department_math">Math</string>
    <string name="department_physics">Physics</string>
    <string name="universitary_campus">University Campus</string>
    <string name="campus_bari" translatable="false">Bari</string>
    <string name="campus_foggia" translatable="false">Foggia</string>
    <string name="campus_lecce" translatable="false">Lecce</string>
    <string name="campus_taranto" translatable="false">Taranto</string>
    <string name="group_creation">Group Creation</string>
    <string name="create_group">Create Group</string>
    <string name="group_name">Group Name</string>
    <string name="project_creation">Project Creation</string>
    <string name="create_project">Create Project</string>
    <string name="project_name">Project Name</string>
    <string name="course">Course</string>
    <string name="group">Group</string>
    <string name="login" translatable="false">Login</string>
    <string name="no_account">Don\'t have an account yet?</string>
    <string name="ready_to_boost_your_project">Ready to boost your project?</string>
    <string name="add_member">Add Member</string>
    <string name="number_of_members">Number of members</string>
    <string name="rating">rating</string>
    <string name="name_surname_email_com">Name.Surname@email.com</string>
    <string name="edit_your_profile">Edit Your Profile</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="notifications">Favourites</string>
    <string name="name_s_rated_your_project">Name S. rated your project</string>
    <string name="xx_minutes_ago">xx minutes ago</string>
    <string name="write_comment">Write a comment</string>
    <string name="post_an_update">Post an update</string>
    <string name="attach_file">Attach File</string>
    <string name="post">Post</string>
    <string name="add_comment">Add a comment</string>
    <string name="welcome_unijet">Welcome to Unijet</string>
    <string name="welcome_slogan">The place where all your University Projects come to life</string>
    <string name="create_groups">Create your groups</string>
    <string name="create_groups_description">Create groups with people you care about</string>
    <string name="boost_projects">Give a boost to your projects</string>
    <string name="boost_projects_description">Share files and documents with other group members</string>
    <string name="check_material">Check studying material</string>
    <string name="check_material_description">Download all the materials needed to take your exams</string>
    <string name="ready_send">Ready to send?</string>
    <string name="ready_send_description">Pack all your projects files and send them to the professor</string>
    <string name="START">START</string>
    <string name="NEXTT">NEXT</string>
    <string name="error_email">Sorry, we don\'t support this e-mail at the moment</string>
    <string name="error_password">Your password must be 7 characters</string>
    <string name="error_confirm_password">Passwords don\'t match!</string>
    <string name="error_name">Your name is not valid</string>
    <string name="error_surname">Your surname is not valid</string>
    <string name="error_department">Your department selection is not valid</string>
    <string name="error_gender">Your gender selection is not valid</string>
    <string name="error_campus">Your University campus selection is not valid</string>
    <string name="registration">Registration</string>
    <string name="check_credentials">please wait check your credentials</string>
    <string name="show_error_2">Name of </string>
    <string name="show_error_3">Error not valid </string>
    <string name="course_creation">Course Creation</string>
    <string name="course_name">Course Name</string>
    <string name="academic_year">Academic Year</string>
    <string name="create_course">Create Course</string>
    <string name="second_ago">%d second ago</string>
    <string name="seconds_ago">%d seconds ago</string>
    <string name="minute_ago">%d minute ago</string>
    <string name="minutes_ago">%d minutes ago</string>
    <string name="hour_ago">%d hour ago</string>
    <string name="hours_ago">%d hours ago</string>
    <string name="day_ago">%d day ago</string>
    <string name="days_ago">%d days ago</string>
    <string name="month_ago">%d month ago</string>
    <string name="months_ago">%d months ago</string>
    <string name="year_ago">%d year ago</string>
    <string name="years_ago">%d years ago</string>
    <string name="create_group_subtitle">Create a new group and start sharing</string>
    <string name="create_group_title">Group</string>
    <string name="create_project_title">Project</string>
    <string name="login_guest">Login as Guest user</string>
    <string name="create_project_subtitle">Create a new project for your course</string>
    <string name="post_option_title">Post</string>
    <string name="post_option_subtitle">Post an update on a group or project</string>
    <string name="upload_title">Upload</string>
    <string name="upload_subtitle">Upload a document, file or image</string>
    <string name="course_subtitle">Create a new course</string>
    <string name="error_academic_year">Your academic year is not valid</string>
    <string name="error_name_course">Your course name is not valid</string>
    <string name="professor_id">Professor ID</string>
    <string name="members_added">Members Added</string>
    <string name="group_name_error">The group name is not valid</string>
    <string name="private_group_warning">When a group is private, it won\'t be listed in the group section and cannot be searched by users that are not member of the group. An invite link will be generated to add further more members</string>
    <string name="error_name_project">Your project name is not valid</string>
    <string name="error_name_group">Your group name is not valid</string>
    <string name="propic_change_success">Profile Picture updated successfully</string>
    <string name="error_profile_picture">There has been an error. You might want to check your internet connection.</string>
    <string name="device_not_supported">It seems like your device doesn\'t support this action</string>
    <string name="owner" translatable="false">Owner:</string>
    <string name="professor">Professor:</string>
    <string name="sign_up_course">Signin up to the course</string>
    <string name="would_course">Do you want to sign up in the course?:</string>
    <string name="YES">YES</string>
    <string name="NO">NO</string>
    <string name="you">You</string>
    <string name="member">Member</string>
    <string name="admin">ADMIN</string>
    <string name="new_post_activity_name">New post</string>
    <string name="course_settings">Course Settings</string>
    <string name="change_course_pic">Change Course Pic</string>
    <string name="manage_members">Manage Members</string>
    <string name="sign_course">Sign in on course</string>
    <string name="leave_course">Leave the course</string>
    <string name="sign_in_leave_the_course">Sign in/Leave the course</string>
    <string name="error_date">Your date is not valid</string>
    <string name="project_settings">Project Settings</string>
    <string name="change_project_pic">Change Project Pic</string>
    <string name="d_document_added">%d document added</string>
    <string name="back_warning">Want to go back?</string>
    <string name="course_registration">Course Registration made successfully</string>
    <string name="course_elimination">Elimination from Course made successfully</string>
    <string name="warning_back_content">Are you sure you want to go back? All changes will be lost</string>
    <string name="warning_deletion">Are you sure you want to go delete this? All the contents will be lost and not visible to anyone</string>
    <string name="remove_from_course">Remove from course</string>
    <string name="remove_course">Remove Course</string>
    <string name="change_group_pic">Change Group Pic</string>
    <string name="group_settings">Group Settings</string>
    <string name="remove_group">Remove Group</string>
    <string name="sign_in_leave_group">Sign In/Leave Group</string>
    <string name="leave_the_group">Leave the group</string>
    <string name="group_registration">Group Registration made successfully</string>
    <string name="group_elimination">Elimination from Group made successfully</string>
    <string name="remove_project">Remove Project</string>
    <string name="post_a_comment">Post a comment</string>
    <string name="post_now">POST NOW</string>
    <string name="write_something_here">Write something here</string>
    <string name="comments">Comments</string>
    <string name="new_feedback">New Feedback</string>
    <string name="feedbacks" translatable="false">Feedbacks</string>
    <string name="new_comment">New Comment</string>
    <string name="input_current_password">Input current password</string>
    <string name="input_new_password">Input new password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New password</string>
    <string name="old_password">Old password</string>

    <string-array name="not_found_strings">
        <item>If you were looking for the void, you found it!</item>
        <item>We searched so hard, but could not find anything</item>
        <item>Looks like no one has been here before you</item>
        <item>Nope, nothing here</item>
        <item>Oh snap, looks like nothing\'s here</item>
        <item>We know you were searching for something, but we have nothing to show you</item>
        <item>Well, there\'s nothing here</item>
    </string-array>
    <string name="generic_error">Something went wrong, please try again</string>
    <string name="wait">Please wait</string>
    <string name="demo_mode_is_active">Sorry, you can see the content only if you are logged in.</string>
    <string name="demo_user">Guest User</string>
    <string name="demo_user_subtitle">Click here to login</string>
</resources>