<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/courses_tab"
        android:icon="@drawable/ic_book_alt"
        android:title="@string/courses_tab_name" />

    <item
        android:id="@+id/projects_tab"
        android:icon="@drawable/ic_cubes"
        android:title="@string/projects_tab_name" />

    <item
        android:id="@+id/placeholder"
        android:enabled="false"
        android:title="" />

    <item
        android:id="@+id/groups_tab"
        android:icon="@drawable/ic_people"
        android:title="@string/groups_tab_name" />

    <item
        android:id="@+id/myunijet_tab"
        android:icon="@drawable/ic_rocket_alt_2"
        android:title="@string/myunijet_tab_name" />


</menu>
