<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:layout_width="match_parent"
    android:background="@drawable/bottom_sheet_bg"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/handle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:layout_marginTop="22dp"
        android:paddingVertical="12dp"
        android:id="@+id/first_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:src="@drawable/ic_people"
            app:tint="?android:textColorPrimary" />

        <LinearLayout
            android:layout_marginStart="14dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_group_title"
                android:fontFamily="@font/open_sans_bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_group_subtitle"
                android:fontFamily="@font/open_sans" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:paddingVertical="12dp"
        android:id="@+id/second_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            app:tint="?android:attr/textColorPrimary"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:src="@drawable/ic_atom"/>

        <LinearLayout
            android:layout_marginStart="14dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_project_title"
                android:fontFamily="@font/open_sans_bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_project_subtitle"
                android:fontFamily="@font/open_sans" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:paddingVertical="12dp"
        android:id="@+id/third_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            app:tint="?android:attr/textColorPrimary"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:src="@drawable/ic_comment"/>

        <LinearLayout
            android:layout_marginStart="14dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_option_title"
                android:fontFamily="@font/open_sans_bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_option_subtitle"
                android:fontFamily="@font/open_sans" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:paddingVertical="12dp"
        android:id="@+id/fourth_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:orientation="horizontal">

        <ImageView
            app:tint="?android:attr/textColorPrimary"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:src="@drawable/ic_upload"/>

        <LinearLayout
            android:layout_marginStart="14dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_title"
                android:fontFamily="@font/open_sans_bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_subtitle"
                android:fontFamily="@font/open_sans" />

        </LinearLayout>

    </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>