<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.Toolbar
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        android:id="@+id/toolbar"
        app:titleTextAppearance="@style/TitleBarTextAppearance"
        app:titleTextColor="?colorOnPrimary"
        app:title="@string/new_feedback"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:theme="@style/top_bar_theme"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/post_now_button"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:text="@string/post_now"
            android:gravity="center"
            android:layout_marginEnd="15dp"
            android:textColor="?colorOnPrimary"
            android:textStyle="bold"
            android:layout_gravity="end"/>


    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:id="@+id/text_name_course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:text="@string/write_something_here"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        />

    <EditText
        android:id="@+id/post_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/post"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_name_course" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintTop_toBottomOf="@id/post_content"
        app:layout_constraintEnd_toEndOf="@id/post_content"
        app:layout_constraintStart_toStartOf="@id/post_content">

        <LinearLayout
            android:id="@+id/attach_feedback"
            android:orientation="horizontal"
            android:layout_marginTop="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RatingBar
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:saveEnabled="true"
                android:numStars="5"/>


        </LinearLayout>

        <TextView
            android:id="@+id/added_feedback_indication"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="gone"
            android:text=""/>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/added_feedback_thumbnails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>